I added all the images for everyone involved in the BW and have to began to add the CSS styles for the landing page.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -48,5 +48,22 @@ table {
 }
 
 body {
-    background-color: #E8505B;
+    background-color: #F3ECC2;
+}
+
+h1 {
+	color: #005D6E;
+}
+
+nav a {
+	text-decoration: none;
+	color: #14B1AB;
+}
+
+h2 {
+	color: #3E3E3E;
+}
+
+p {
+	color: #FF7777;
 }
