--- a/CSS/index.css
+++ b/CSS/index.css
@@ -51,19 +51,107 @@ body {
     background-color: #F3ECC2;
 }
 
+header {
+	display: flex;
+	align-items: center;
+	margin: 2%;
+	justify-content: space-evenly;
+}
+
+/* header h1 {
+	justify-content: flex-start;
+}
+
+header nav {
+	align-items: flex-end;
+} */
 h1 {
 	color: #005D6E;
+	font-family: “Arial”, sans-serif;
+	font-weight: bold;
+	font-size: 40px;
+}
+
+h1 a{
+    text-decoration: none;
+    color: #005D6E;
 }
 
 nav a {
 	text-decoration: none;
 	color: #14B1AB;
+	font-family: “Arial”, sans-serif;
+	font-size: 24px;
+	justify-content: space-between;
 }
 
 h2 {
 	color: #3E3E3E;
+	font-family: “Arial Bold”, sans-serif;
+	font-size: 60px;
 }
 
 p {
 	color: #FF7777;
+	font-family: “Arial”, sans-serif;
+	font-size: 25px;
+}
+
+.how-to-info {
+	display: flex;
+	margin: 10%;
+	padding: 4%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+section h2 {
+	padding-bottom: 3%;
+}
+
+h4 {
+	color: #FF7777;
+	font-family: “Arial”, sans-serif;
+	font-size: 20px;	
+}
+
+h5 {
+	color: #3E3E3E;
+	font-family: “Arial”, sans-serif;
+	font-size: 16px;
+}
+
+footer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+footer img {
+	padding-left: 1rem;
+	margin-top: 10%;
+	margin-bottom: 5%;
+}
+
+@media ( max-width: 800px ) {
+	h2 {
+		font-size: 3.5rem;
+		text-align: center;
+		margin-top: 12.5%;
+	}
+	p {
+		font-size: 1.7rem;
+		text-align: center;
+	}
+	h4 {
+		font-size: 1.25rem;
+	}
+	h5 {
+		font-size: 1rem;
+	}
+	footer {
+		margin-top: 5%;
+	}
 }
