--- a/CSS/about.css
+++ b/CSS/about.css
@@ -235,3 +235,82 @@ img{
 	margin-top: 5%;
 	margin-bottom: 5%;
 }
+
+@media (max-width: 1000px) {
+	.mem1{
+		margin-left: 8%;
+	}
+	.mem3{
+		margin-right: 8%;
+	}
+	.mem4 {
+		margin-left: 8%;
+		margin-bottom: 2%;
+	}
+	.mem5 {
+		margin-left: 10%;
+		margin-bottom: 2%;
+	}
+	.mem6 {
+		margin-right: 8%;
+		margin-bottom: 2%;
+	}
+	.mem7{
+		margin-left: 23%;
+	}
+}
+
+@media (max-width: 800px) {
+	.mem1{
+		margin-left: 20%;
+	}
+	.mem3 {
+		margin-left: 20%;
+	}
+	.mem4 {
+		margin-left: 2%;
+	}
+	.mem5 {
+		margin-left: 20%;
+	}
+	.mem7 {
+		margin-left: 20%;
+	}
+}
+
+@media (max-width: 500px) {
+	h1 {
+		font-size: 2rem;
+	}
+	nav a {
+		font-size: 1.25rem;
+	}
+	.mem1{
+		margin-left: 30%;
+		margin-top: 5%;
+	}
+	.mem2{
+		margin-left: 30%;
+		margin-bottom: 2%;
+	}
+	.mem3{
+		margin-left: 30%;
+		margin-bottom: 2%;
+	}
+	.mem4{
+		margin-left: 30%;
+	}
+	.mem5{
+		margin-left: 30%;
+	}
+	.mem6{
+		margin-left: 30%;
+	}
+	.mem7{
+		margin-left: 30%;
+		margin-bottom: 2%;
+	}
+	.mem8{
+		margin-left: 30%;
+	}
+}
