--- a/CSS/index.css
+++ b/CSS/index.css
@@ -135,6 +135,20 @@ footer img {
 	margin-bottom: 5%;
 }
 
+@media (max-width: 1000px) {
+	h2 {
+		font-size: 5rem;
+		text-align: center;
+	}
+	p {
+		font-size: 2rem;
+		text-align: center;
+	}
+	h4 {
+		font-size: 1.4rem;
+	}
+}
+
 @media ( max-width: 800px ) {
 	h2 {
 		font-size: 3.5rem;
@@ -153,5 +167,34 @@ footer img {
 	}
 	footer {
 		margin-top: 5%;
+	}
+}
+
+@media ( max-width: 500px ) {
+	h1 {
+		font-size: 2rem;
+	}
+	nav a {
+		font-size: 1.25rem;
+	}
+	h2 {
+		font-size: 2.5rem;
+		text-align: center;
+		margin-top: 25%;
+	}
+	p {
+		font-size: 1.5rem;
+		text-align: center;
+		margin-top: 3%;
+	}
+	h4 {
+		font-size: 1rem;
+	}
+	h5 {
+		font-size: .75rem;
+		margin-left: 15%;
+	}
+	footer {
+		margin-top: 33%;
 	}
 }
