--- a/CSS/about.css
+++ b/CSS/about.css
@@ -147,7 +147,7 @@ nav a {
     text-shadow: 0px 2px 2px #00000029;
 }
 
-.mem1 {
+.mem {
 	box-shadow: 0px 3px 3px #00000029;
 	border: 1px solid #FFDB00;
 	border-radius: 10px;
@@ -157,76 +157,7 @@ nav a {
 	margin-left: 6%;
 	margin-right: 10%;
 	margin-bottom: 2%;
-}
-
-.mem2 {
-	box-shadow: 0px 3px 3px #00000029;
-	border: 1px solid #FFDB00;
-	border-radius: 10px;
-	opacity: 1;
-	width: 205px;
-	height: 350px;
-	margin-right: 10%;
-}
-
-.mem3 {
-	box-shadow: 0px 3px 3px #00000029;
-	border: 1px solid #FFDB00;
-	border-radius: 10px;
-	opacity: 1;
-	width: 205px;
-	height: 350px;
-	margin-right: 10%;
-}
-
-.mem4 {
-	box-shadow: 0px 3px 3px #00000029;
-	border: 1px solid #FFDB00;
-	border-radius: 10px;
-	opacity: 1;
-	width: 205px;
-	height: 350px;
-}
-
-.mem5 {
-	box-shadow: 0px 3px 3px #00000029;
-	border: 1px solid #FFDB00;
-	border-radius: 10px;
-	opacity: 1;
-	width: 205px;
-	height: 350px;
-	margin-left: 6%;
-	margin-right: 10%;
-
-}
-
-.mem6 {
-	box-shadow: 0px 3px 3px #00000029;
-	border: 1px solid #FFDB00;
-	border-radius: 10px;
-	opacity: 1;
-	width: 205px;
-	height: 350px;
-	margin-right: 10%;
-}
-
-.mem7 {
-	box-shadow: 0px 3px 3px #00000029;
-	border: 1px solid #FFDB00;
-	border-radius: 10px;
-	opacity: 1;
-	width: 205px;
-	height: 350px;
-	margin-right: 10%;
-}
-
-.mem8{
-	box-shadow: 0px 3px 3px #00000029;
-	border: 1px solid #FFDB00;
-	border-radius: 10px;
-	opacity: 1;
-	width: 205px;
-	height: 350px;
+	border: 1px solid red;
 }
 
 h3 {
@@ -296,83 +227,16 @@ img{
 	flex-wrap: wrap;
 	margin-top: 5%;
 	margin-bottom: 5%;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid red;
 }
 
-@media (max-width: 1000px) {
-	.mem1{
-		margin-left: 8%;
-	}
-	.mem3{
-		margin-right: 8%;
-	}
-	.mem4 {
-		margin-left: 8%;
-		margin-bottom: 2%;
-	}
-	.mem5 {
-		margin-left: 10%;
-		margin-bottom: 2%;
-	}
-	.mem6 {
-		margin-right: 8%;
-		margin-bottom: 2%;
-	}
-	.mem7{
-		margin-left: 23%;
-	}
-}
-
-@media (max-width: 800px) {
-	.mem1{
-		margin-left: 20%;
-	}
-	.mem3 {
-		margin-left: 20%;
-	}
-	.mem4 {
-		margin-left: 2%;
-	}
-	.mem5 {
-		margin-left: 20%;
-	}
-	.mem7 {
-		margin-left: 20%;
-	}
-}
-
-@media (max-width: 500px) {
+@media (min-width: 500px) {
 	h1 {
 		font-size: 2rem;
 	}
 	nav a {
 		font-size: 1rem;
-	}
-	.mem1{
-		margin-left: 30%;
-		margin-top: 5%;
-	}
-	.mem2{
-		margin-left: 30%;
-		margin-bottom: 2%;
-	}
-	.mem3{
-		margin-left: 30%;
-		margin-bottom: 2%;
-	}
-	.mem4{
-		margin-left: 30%;
-	}
-	.mem5{
-		margin-left: 30%;
-	}
-	.mem6{
-		margin-left: 30%;
-	}
-	.mem7{
-		margin-left: 30%;
-		margin-bottom: 2%;
-	}
-	.mem8{
-		margin-left: 30%;
 	}
 }
