--- a/CSS/features.css
+++ b/CSS/features.css
@@ -112,7 +112,11 @@ section {
     justify-content: center;
     align-items: center;
     margin: 10%;
-	padding: 4%;
+    padding: 4%;
+}
+
+.members{
+    border: 1px solid;
 }
 
 section p {
