--- a/CSS/about.css
+++ b/CSS/about.css
@@ -238,3 +238,29 @@ img{
 		font-size: 1rem;
 	}
 }
+
+@media (max-width: 499px ) {
+	header {
+		display: flex;
+		flex-direction: column;
+	}
+	div.title {
+		font-size: 2rem;
+		display: flex;
+		justify-content: center;
+		margin-bottom: 5%;
+	}
+	nav {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 60%;
+	}
+	nav a {
+		font-size: 1.5rem;
+		justify-content: space-between;
+	}
+	.mem{
+		margin-top: 10%;
+	}
+}
