--- a/CSS/features.css
+++ b/CSS/features.css
@@ -122,7 +122,7 @@ section p {
     font-size: 24px;
 }
 
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
 	h2 {
 		font-size: 3.75rem;
         text-align: center;
@@ -145,7 +145,7 @@ section p {
         font-size: 1.7rem;
         text-align: center;
     }
-}
+} */
 
 @media (min-width: 500px) {
     h1 {
@@ -157,7 +157,7 @@ section p {
     h2{
         font-size: 2rem;
         text-align: center;
-        margin-top: 25%;
+        margin-top: 12.5%;
         width: 475px;
         margin-bottom: 2%;
     }
@@ -166,5 +166,44 @@ section p {
         width: 400px;
         margin-bottom: 3%;
         font-size: 1.5rem;
+    }
+}
+
+@media ( max-width: 499px ) {
+    header {
+		display: flex;
+		flex-direction: column;
+	}
+	div.title {
+		font-size: 2rem;
+		display: flex;
+		justify-content: center;
+		margin-bottom: 5%;
+	}
+	nav {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 60%;
+	}
+	nav a {
+		font-size: 1.5rem;
+		justify-content: space-between;
+    }
+    h2 {
+		font-size: 2rem;
+		text-align: center;
+        width: 95%;
+        margin-top: 5%;
+        margin-bottom: 50%;
+	}
+    p {
+        text-align: center;
+        width: 95%;
+        font-size: 1.5rem;
+    }
+    .middle-section{
+        display: flex;
+        
     }
 }
